--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instagram-parser",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
